Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- #1925: Can use current user's as sending address
- #1955: Don't crash if a group having roles has been deleted 
- #1950: html sanitization before sending via smtp
- #1926: provide text alternative for html subscriptions
- #1946: CPSSubscriptions stores persistently in the database all notification
  messages
- Leveraging the use of CPSUtil.text.toAscii.
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 